--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -4,7 +4,9 @@ plugins {
 
 android {
     compileSdk 31
-
+    dataBinding{
+        enabled = true;
+    } //enable dataBinding
     defaultConfig {
         applicationId "com.example.moviesearchmobileapp"
         minSdk 21
@@ -32,7 +34,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 }
